--- a/index.html
+++ b/index.html
@@ -40,10 +40,21 @@
       }
     </style>
   </head>
-  <body class="font-manrope">
-    <main>
-      <p class="text-blue-600">happy</p>
-    </main>
+  <body class="sm:font-manrope">
+    <header>
+      <section class="font-thin text-4xl pl-6 mt-4 rounded-md">
+        <p class="p-4">Its time for good</p>
+        <p class="p-4">Coffe at Good tea <br />House!!</p>
+
+        <button
+          class="btn bg-transparent hover:scale-125 border-black hover:bg-black hover:text-white hover:font-semibold"
+        >
+          Click
+        </button>
+      </section>
+      <section></section>
+    </header>
+    <main></main>
 
     <footer></footer>
   </body>
